-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.8
-
Component/s: Applications, Drivers: Filesystems
-
Labels:None
I ran chkdsk c: -f > result.txt after a fresh installation of ReactOS 0.4.7. There are many messages, (alltogether ca. 340 kB), the simplest and most unimportant is that there is something wrong with the short filename support. The tools seems to delete files / folders that it shouldnt. Please check.
Sorry, but I did not get the result.txt out of virtualbox, otherwise I would have added it.
- duplicates
-
CORE-11821 pseudo FileSystem corruption detected by chkdsk right after reactOS setup
-
- Resolved
-
- relates to
-
CORE-14119 VFATLIB repairs volume even if asked not to
-
- Resolved
-