[VFATLIB] Make Chkdsk handle volume opening locking failures. For instance, when repair is required, we can ask the caller whether we should continue or not in case locking failed. Also, introduced a hack for 1st stage where IopParseDevice() hack is in usage so that broken NTSTATUS is diverted to appropriate status. That way, usetup will properly continue even if locking failed (due to its callback stub!)

CORE-14087